--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pydantic-settings = "^2.0.2"
 sqlalchemy = "^2.0.19"
 alembic = "^1.11.1"
 psycopg = "^3.1.9"
+httpx = "^0.24.1"
 
 
 [tool.poetry.group.dev.dependencies]
