--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,14 @@ services:
       - ./postgres-data:/var/lib/postgresql/data/
 
 
+  redis:
+    container_name: redis
+    image: redis
+    command: [sh, -c, "redis-server"]
+    ports:
+      - "6379:6379"
+
+
   backend:
     container_name: "backend"
     build: .
