--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pydantic-settings = "^2.0.2"
 sqlalchemy = "^2.0.19"
 alembic = "^1.11.1"
 psycopg = "^3.1.9"
+websockets = "^11.0.3"
+redis = "^4.6.0"
 
 
 [tool.poetry.group.dev.dependencies]
