--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ psycopg = "^3.1.9"
 httpx = "^0.24.1"
 websockets = "^11.0.3"
 redis = "^4.6.0"
+python-multipart = "^0.0.6"
 
 
 [tool.poetry.group.dev.dependencies]
