--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       - ./.env
     volumes:
       - ./postgres-data:/var/lib/postgresql/data/
+    ports:
+      - "5432:5432"
 
 
   redis:
