--- a/.env_example
+++ b/.env_example
@@ -1,5 +1,11 @@
 APP_HOST=0.0.0.0
 APP_PORT=8000
+
+ALLOW_ORIGINS=http://localhost,http://localhost:3000,*
+ALLOW_CREDENTIALS=True
+ALLOW_METHODS=GET,POST,PUT,PATCH,DELETE
+ALLOW_HEADERS=*
+
 CONTEST_API_URL="https://api.contest.yandex.net/api/public/v2"
 
 POSTGRES_HOST=postgresql
