--- a/.env_example
+++ b/.env_example
@@ -7,6 +7,7 @@ ALLOW_METHODS=GET,POST,PUT,PATCH,DELETE
 ALLOW_HEADERS=*
 
 CONTEST_API_URL="https://api.contest.yandex.net/api/public/v2"
+AUTH_API_URL="https://login.yandex.ru"
 
 POSTGRES_HOST=postgresql
 POSTGRES_PORT=5432
