Update build option

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,4 +15,4 @@ deploy:
     - echo "Deploying to production..."
     - cp .env_example .env
     - docker-compose down
-    - docker-compose up -d
+    - docker-compose up --build -d
