Update origins in env

--- a/.env_example
+++ b/.env_example
@@ -1,7 +1,7 @@
 APP_HOST=0.0.0.0
 APP_PORT=8000
 
-ALLOW_ORIGINS=http://localhost,http://localhost:3000,*
+ALLOW_ORIGINS=*
 ALLOW_CREDENTIALS=True
 ALLOW_METHODS=GET,POST,PUT,PATCH,DELETE
 ALLOW_HEADERS=*
