--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,14 @@ __pycache__
 *.py[co]
 .mypy_cache
 docker-compose.yml
+
+
+# Unit test / coverage reports
+htmlcov/
+.tox/
+.coverage
+.cache
+assets/
+nosetests.xml
+coverage.xml
+assets/
