--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,8 @@ pytest:
   script:
     - echo "Testing application"
     - docker build -t icpc-backend-testing -f Dockerfile_testing .
-    - docker run --network=icpc-backend --rm icpc-backend-testing
+    - cp .env_example .env
+    - docker run --network=icpc-backend --env-file .env --rm icpc-backend-testing
 
 deploy:
   stage: deploy
