--- a/Dockerfile_testing
+++ b/Dockerfile_testing
@@ -21,4 +21,4 @@ RUN poetry install
 
 ENTRYPOINT ["/code/boot.sh"]
 
-CMD poetry run python3 -m pytest --verbosity=2 --showlocals --log-level=DEBUG
+CMD ["poetry", "run", "pytest", "--verbosity=2", "--showlocals", "--log-level=DEBUG", "--cov=app", "--cov-fail-under=50"]
