--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ websockets = "^11.0.3"
 redis = "^4.6.0"
 python-multipart = "^0.0.6"
 isodate = "^0.6.1"
+sqlalchemy-utils = "^0.41.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -28,6 +29,7 @@ pytest = "^7.4.0"
 pytest-asyncio = "^0.21.1"
 pytest-cov = "^4.1.0"
 pylint = "^2.17.5"
+configargparse = "^1.7"
 
 [build-system]
 requires = ["poetry-core"]
